# stockholm-freja

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
stockholm_freja/: __init__.py  freja.py
tests/: test_freja.py
